--- a/paragraf.html
+++ b/paragraf.html
@@ -11,4 +11,8 @@
  saling mendukung. Paragraf dibuat dengan menentukan ide pokok
 terlebih
  dahulu. Lalu diikuti dengan kalimat-kalimat pendukung.</p>
+ <p style="text-indent: 45px;">Contoh ini baris pertama yang ditulis masuk ke
+    dalam.
+    Baris kedua tetap ditulis seperti biasa. Dan juga baris
+    Ke-3 ditulis seperti biasa.</p>
  </body
