--- a/paragraf.html
+++ b/paragraf.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pewarnaan</title>
+<title>Tutorial Paragraf di HTML #2</title>
 </head>
-<body bgcolor="aqua"> <!-- funsi memberi barwa pada body / background -->
-    <h3 align="center">belajar pewarnaan</h3>
-
-    <font color="red">merubah found berwarna merah,dengan warna</font>
-    <br>
-    <font color=#"FF0000">merubah font berwarna merah,dengan nilai heksadesimal</font>
-
+<body>
+<p align="center">Ini adalah sebuah paragraf yang berisi beberapa
+kalimat. Saya sedang belajar HTML di Petani Kode. Saat ini Sedang,
+Belajar tentang paragraf.</p>
+<p align="right">Paragraf adalah kumpulan dari beberapa kalimat yang
+saling mendukung. Paragraf dibuat dengan menentukan ide pokok
+terlebih
+dahulu. Lalu diikuti dengan kalimat-kalimat pendukung.</p>
+<p style="text-indent: 45px;color:bisque;">Contoh ini baris pertama yang ditulis masuk ke
+   dalam.
+   Baris kedua tetap ditulis seperti biasa. Dan juga baris
+   Ke-3 ditulis seperti biasa.</p>
 </body>
-</html>
